<resources>
    <string name="app_name">Filmoteca</string>
    <string name="textview">Creada por: Victor Pena</string>
    <string name="ir_al_sitio_web">Ir al sitio web</string>
    <string name="obtener_soporte">Obtener Soporte</string>
    <string name="todo">TODO</string>
    <string name="volver">Volver</string>
    <string name="ha_sido_editada">Ha sido editada</string>
    <string name="ver_pel_cula_a">Ver: Regreso al futuro</string>
    <string name="ver_pel_cula_b">Ver: Your Name</string>
    <string name="acerca_de">Acerca de</string>
    <string name="datos_de_la_pel_cula">Datos de la película</string>
    <string name="ver_pel_cula_relacionada">Ver película relacionada</string>
    <string name="editar_pel_cula">Editar película</string>
    <string name="volver_a_la_principal">Volver a la principal</string>
    <string name="editando_pel_cula">Editando película</string>
    <string name="guardar">Guardar</string>
    <string name="candelar">Cancelar</string>
    <string name="ver_en_imdb">VER EN IMDB</string>
    <string name="director">Director:</string>
    <string name="a_o">Año:</string>
    <string name="formato">Formato</string>
    <string name="a_or">AñoR</string>
    <string name="genero">Genero</string>
    <string name="directorr">DirectorR</string>
    <string name="versi_n_extendida">Versión extendida</string>
    <string name="defaulte">default</string>
    <string name="change_imagen">Change imagen</string>
    <string name="cargar_imagenes">cargar imagenes</string>
    <string name="captura_fotograf_a">CAPTURA FOTOGRAFÍA</string>
    <string name="selecciona_imagen">SELECCIONA IMAGEN</string>
    <string name="comentarios">Comentarios</string>
    <string name="a_oO">Año</string>
    <string name="nombre_del_director">Nombre del director</string>
    <string name="titulo_de_la_pel_cula">Titulo de la película</string>
    <string name="enlace_a_imdb">Enlace a IMDB</string>
    <string name="elige_una_pel_cula">Elige una película</string>
    <string name="menu_item_nueva_pelicula">Añadir pelicula</string>
    <string name="menu_item_acerca_de">Acerca de...</string>
</resources>